Bump Spring Boot from 3.1.5 to 3.2.0
Signed-off-by: Steven Sheehy <steven.sheehy@swirldslabs.com>